fixed all newsroom and publications buttons spacing and hovering

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1075,6 +1075,10 @@ video {
   margin-top: 77px;
 }
 
+.box-border {
+  box-sizing: border-box;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -1229,6 +1233,22 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
+.h-\[26px\] {
+  height: 26px;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .min-h-\[112px\] {
@@ -1415,6 +1435,22 @@ video {
   width: 100%;
 }
 
+.w-\[87px\] {
+  width: 87px;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[90px\] {
+  width: 90px;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -1425,6 +1461,14 @@ video {
 
 .max-w-\[90\%\] {
   max-width: 90%;
+}
+
+.max-w-\[1550px\] {
+  max-width: 1550px;
+}
+
+.max-w-\[1400px\] {
+  max-width: 1400px;
 }
 
 .cursor-pointer {
@@ -1679,6 +1723,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1743,6 +1797,22 @@ video {
   padding-top: 1rem;
 }
 
+.pt-\[2px\] {
+  padding-top: 2px;
+}
+
+.pt-\[3px\] {
+  padding-top: 3px;
+}
+
+.pt-\[4px\] {
+  padding-top: 4px;
+}
+
+.pt-\[10px\] {
+  padding-top: 10px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1753,6 +1823,14 @@ video {
 
 .text-right {
   text-align: right;
+}
+
+.align-baseline {
+  vertical-align: baseline;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-2xl {
@@ -1865,6 +1943,14 @@ video {
   line-height: 1rem;
 }
 
+.text-\[10\.5px\] {
+  font-size: 10.5px;
+}
+
+.text-\[1\.5px\] {
+  font-size: 1.5px;
+}
+
 .italic {
   font-style: italic;
 }
@@ -1907,6 +1993,38 @@ video {
 
 .leading-\[8px\] {
   line-height: 8px;
+}
+
+.leading-8 {
+  line-height: 2rem;
+}
+
+.leading-\[11px\] {
+  line-height: 11px;
+}
+
+.leading-\[12px\] {
+  line-height: 12px;
+}
+
+.leading-\[13px\] {
+  line-height: 13px;
+}
+
+.leading-\[14px\] {
+  line-height: 14px;
+}
+
+.leading-\[18px\] {
+  line-height: 18px;
+}
+
+.leading-\[22px\] {
+  line-height: 22px;
+}
+
+.leading-\[14\.5px\] {
+  line-height: 14.5px;
 }
 
 .text-black {
@@ -2004,14 +2122,34 @@ video {
   border-color: rgb(57 154 194 / var(--tw-border-opacity));
 }
 
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .hover\:bg-primary:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(57 154 194 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-primary:hover {
+  --tw-text-opacity: 1;
+  color: rgb(57 154 194 / var(--tw-text-opacity));
+}
+
+.hover\:text-primary-dark2:hover {
+  --tw-text-opacity: 1;
+  color: rgb(38 71 108 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -2139,6 +2277,14 @@ video {
     height: 100%;
   }
 
+  .md\:h-\[28px\] {
+    height: 28px;
+  }
+
+  .md\:h-11 {
+    height: 2.75rem;
+  }
+
   .md\:w-44 {
     width: 11rem;
   }
@@ -2177,6 +2323,18 @@ video {
 
   .md\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .md\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .md\:w-\[90px\] {
+    width: 90px;
+  }
+
+  .md\:w-40 {
+    width: 10rem;
   }
 
   .md\:auto-cols-fr {
@@ -2428,6 +2586,14 @@ video {
     height: 360px;
   }
 
+  .xl\:h-11 {
+    height: 2.75rem;
+  }
+
+  .xl\:h-8 {
+    height: 2rem;
+  }
+
   .xl\:min-h-\[360px\] {
     min-height: 360px;
   }
@@ -2482,6 +2648,14 @@ video {
 
   .xl\:w-\[862px\] {
     width: 862px;
+  }
+
+  .xl\:w-40 {
+    width: 10rem;
+  }
+
+  .xl\:w-28 {
+    width: 7rem;
   }
 
   .xl\:grid-cols-\[1fr_1fr_40\%\] {
@@ -2579,6 +2753,20 @@ video {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .xl\:text-\[11\.5px\] {
+    font-size: 11.5px;
   }
 
   .xl\:leading-10 {
